[package]
name = "dev-stress"
version = "0.9.5"
edition = "2021"
rust-version = "1.75"
readme = "README.md"
license = "Apache-2.0"

authors = [
    "James Gober <me@jamesgober.com>"
]

description = "High-load stress and soak testing for Rust. Concurrent workloads, latency percentiles, throughput collapse detection, sustained-pressure verdicts. Part of the dev-* verification collection."

keywords = [
    "stress",
    "load-testing",
    "concurrency",
    "soak",
    "latency"
]

categories = [
    "development-tools",
    "development-tools::testing",
    "development-tools::profiling"
]

documentation = "https://docs.rs/dev-stress"
repository = "https://github.com/jamesgober/dev-stress"
homepage = "https://github.com/jamesgober/dev-stress"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
dev-report = { version = "0.9", path = "../dev-report" }
sysinfo = { version = "0.30", optional = true, default-features = false }

[dev-dependencies]

[features]
default = []
system-stats = ["dep:sysinfo"]

[profile.release]
opt-level = 3
lto = "thin"
